GNOME Bugzilla – Bug 678598
Clicking on the volume slider doesn't move the current volume
Last modified: 2012-06-25 12:34:23 UTC
The behaviour of Gnome Control Center - Sound "Volume" slider differs from the drop-down in the shell when you click on the slider. Testing: Set volume to 0 Click in the middle (approx 50% volume) Expectation: Same behaviour as the drop down, current volume increases to the point where you click. Reality: Nothing happens.
This is because the custom sliders in the sound panel interfere with the changed behaviour of GtkScale. The fix is to just remove the custom slider implementations and use GtkScale. It has the right behaviour now.
commit 9859ffbc27aca0a4f1a58412233498cdf846da70 Author: Bastien Nocera <hadess@hadess.net> Date: Mon Jun 25 13:32:36 2012 +0100 sound: Remove left-click behaviour work-around https://bugzilla.gnome.org/show_bug.cgi?id=678598