sound: Remove left-click behaviour work-around

https://bugzilla.gnome.org/show_bug.cgi?id=678598